(images) Fix large size display on mobile so that header is visible again

--- a/astrobin/static/astrobin/scss/astrobin-mobile.scss
+++ b/astrobin/static/astrobin/scss/astrobin-mobile.scss
@@ -14,6 +14,16 @@
     padding-top: 50px;
   }
 
+  body.full {
+    .navbar {
+      position: unset !important;
+
+      .brand-mobile {
+        display: none !important;
+      }
+    }
+  }
+
   .anchor {
     top: 0;
   }
